y.output
Terminals unused in grammar

    DOT


State 53 conflicts: 21 shift/reduce
State 168 conflicts: 1 shift/reduce


Grammar

    0 $accept: s $end

    1 s: main_func
    2  | functional_declaration s

    3 functional_declaration: func_type func_declarator compound_statement

    4 var_type: INT
    5         | CHAR
    6         | FLOAT

    7 func_type: var_type
    8          | VOID

    9 func_declarator: IDENTIFIER LEFT_ROUND RIGHT_ROUND
   10                | IDENTIFIER LEFT_ROUND param_list RIGHT_ROUND

   11 param_list: declare_var
   12           | declare_var COMMA param_list

   13 declare_var: var_type IDENTIFIER

   14 main_func: MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement
   15          | INT MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement
   16          | VOID MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement

   17 compound_statement: LEFT_CURLY RIGHT_CURLY
   18                   | LEFT_CURLY statement_list RIGHT_CURLY

   19 statement_list: single_statement
   20               | single_statement statement_list

   21 single_statement: switch_statment
   22                 | expr
   23                 | if_statement
   24                 | print_statement
   25                 | scanf_statement
   26                 | for_statement
   27                 | return_statement
   28                 | while_statement
   29                 | jump_statement
   30                 | declaration
   31                 | compound_statement

   32 jump_statement: BREAK SEMICOLON
   33               | CONTINUE SEMICOLON

   34 return_statement: RETURN expr

   35 expr: SEMICOLON
   36     | expression_statement SEMICOLON
   37     | expr COMMA expr SEMICOLON

   38 expression_statement: expression_statement OR_OP expression_statement
   39                     | expression_statement AND_OP expression_statement
   40                     | expression_statement GT_OP expression_statement
   41                     | expression_statement LT_OP expression_statement
   42                     | expression_statement GE_OP expression_statement
   43                     | expression_statement LE_OP expression_statement
   44                     | expression_statement PLUS expression_statement
   45                     | expression_statement HYPHEN expression_statement
   46                     | expression_statement STAR expression_statement
   47                     | expression_statement SLASH expression_statement
   48                     | expression_statement PERCENT expression_statement
   49                     | expression_statement EQ_OP expression_statement
   50                     | expression_statement NE_OP expression_statement
   51                     | unary_expr
   52                     | assignment_statement
   53                     | functional_call
   54                     | LEFT_ROUND expression_statement RIGHT_ROUND
   55                     | I_CONSTANT
   56                     | F_CONSTANT
   57                     | STRING_LITERAL
   58                     | arr_element
   59                     | IDENTIFIER

   60 unary_expr: EXCLAMATION expression_statement
   61           | HYPHEN expression_statement

   62 functional_call: IDENTIFIER LEFT_ROUND RIGHT_ROUND
   63                | IDENTIFIER LEFT_ROUND arg_list RIGHT_ROUND

   64 arg_list: arg
   65         | arg COMMA arg_list

   66 arg: F_CONSTANT
   67    | I_CONSTANT
   68    | IDENTIFIER
   69    | STRING_LITERAL

   70 arr_element: IDENTIFIER LEFT_SQUARE I_CONSTANT RIGHT_SQUARE
   71            | IDENTIFIER LEFT_SQUARE I_CONSTANT RIGHT_SQUARE LEFT_SQUARE I_CONSTANT RIGHT_SQUARE

   72 assignment_statement: IDENTIFIER EQUAL_SIGN expression_statement
   73                     | arr_element EQUAL_SIGN expression_statement

   74 switch_statment: SWITCH LEFT_ROUND expression_statement RIGHT_ROUND LEFT_CURLY case_list_def RIGHT_CURLY

   75 case_list_def: case_list
   76              | case_list default_stmt
   77              | %empty

   78 case_list: case
   79          | case_list case

   80 case: CASE expression_statement COLON statement_list
   81     | CASE expression_statement COLON

   82 default_stmt: DEFAULT COLON statement_list
   83             | DEFAULT COLON

   84 if_statement: IF LEFT_ROUND expression_statement RIGHT_ROUND single_statement else_clause

   85 else_clause: ELSE single_statement
   86            | %empty

   87 for_loop_assignment: assignment_statement
   88                    | assignment_statement COMMA for_loop_assignment
   89                    | %empty

   90 for_loop_declaration: declaration
   91                     | SEMICOLON

   92 for_statement: FOR LEFT_ROUND for_loop_declaration expr for_loop_assignment RIGHT_ROUND statement_list

   93 declaration: var_type init_declarator_list SEMICOLON

   94 init_declarator_list: init_declarator_list COMMA init_declarator
   95                     | init_declarator

   96 init_declarator: declarator_var EQUAL_SIGN expression_statement
   97                | declarator_var
   98                | declarator_arr

   99 declarator_var: IDENTIFIER

  100 declarator_arr: IDENTIFIER LEFT_SQUARE expression_statement RIGHT_SQUARE
  101               | IDENTIFIER LEFT_SQUARE expression_statement RIGHT_SQUARE LEFT_SQUARE expression_statement RIGHT_SQUARE

  102 while_statement: WHILE LEFT_ROUND expression_statement RIGHT_ROUND statement_list

  103 print_statement: PRINTF_TOKEN LEFT_ROUND STRING_LITERAL RIGHT_ROUND SEMICOLON
  104                | PRINTF_TOKEN LEFT_ROUND STRING_LITERAL COMMA print_params RIGHT_ROUND SEMICOLON

  105 print_params: IDENTIFIER
  106             | IDENTIFIER COMMA print_params

  107 scanf_statement: SCANF_TOKEN LEFT_ROUND STRING_LITERAL COMMA addr_list RIGHT_ROUND SEMICOLON

  108 addr_list: addr
  109          | addr COMMA addr_list

  110 addr: AMPERSAND IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BREAK (258) 32
    CASE (259) 80 81
    CHAR (260) 5
    CONTINUE (261) 33
    DEFAULT (262) 82 83
    ELSE (263) 85
    FLOAT (264) 6
    FOR (265) 92
    IF (266) 84
    RETURN (267) 34
    INT (268) 4 15
    SWITCH (269) 74
    VOID (270) 8 16
    WHILE (271) 102
    MAIN_FUNCTION (272) 14 15 16
    IDENTIFIER (273) 9 10 13 59 62 63 68 70 71 72 99 100 101 105 106 110
    I_CONSTANT (274) 55 67 70 71
    F_CONSTANT (275) 56 66
    STRING_LITERAL (276) 57 69 103 104 107
    AND_OP (277) 39
    OR_OP (278) 38
    LE_OP (279) 43
    GE_OP (280) 42
    EQ_OP (281) 49
    NE_OP (282) 50
    EQUAL_SIGN (283) 72 73 96
    SEMICOLON (284) 32 33 35 36 37 91 93 103 104 107
    LEFT_CURLY (285) 17 18 74
    RIGHT_CURLY (286) 17 18 74
    COMMA (287) 12 37 65 88 94 104 106 107 109
    COLON (288) 80 81 82 83
    LEFT_ROUND (289) 9 10 14 15 16 54 62 63 74 84 92 102 103 104 107
    RIGHT_ROUND (290) 9 10 14 15 16 54 62 63 74 84 92 102 103 104 107
    LEFT_SQUARE (291) 70 71 100 101
    RIGHT_SQUARE (292) 70 71 100 101
    DOT (293)
    AMPERSAND (294) 110
    EXCLAMATION (295) 60
    HYPHEN (296) 45 61
    PLUS (297) 44
    STAR (298) 46
    SLASH (299) 47
    LT_OP (300) 41
    GT_OP (301) 40
    PERCENT (302) 48
    PRINTF_TOKEN (303) 103 104
    SCANF_TOKEN (304) 107


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    s (51)
        on left: 1 2
        on right: 0 2
    functional_declaration (52)
        on left: 3
        on right: 2
    var_type (53)
        on left: 4 5 6
        on right: 7 13 93
    func_type (54)
        on left: 7 8
        on right: 3
    func_declarator (55)
        on left: 9 10
        on right: 3
    param_list (56)
        on left: 11 12
        on right: 10 12
    declare_var (57)
        on left: 13
        on right: 11 12
    main_func (58)
        on left: 14 15 16
        on right: 1
    compound_statement (59)
        on left: 17 18
        on right: 3 14 15 16 31
    statement_list (60)
        on left: 19 20
        on right: 18 20 80 82 92 102
    single_statement (61)
        on left: 21 22 23 24 25 26 27 28 29 30 31
        on right: 19 20 84 85
    jump_statement (62)
        on left: 32 33
        on right: 29
    return_statement (63)
        on left: 34
        on right: 27
    expr (64)
        on left: 35 36 37
        on right: 22 34 37 92
    expression_statement (65)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 36 38 39 40 41 42 43 44 45 46 47 48 49 50 54 60 61 72 73 74 80 81 84 96 100 101 102
    unary_expr (66)
        on left: 60 61
        on right: 51
    functional_call (67)
        on left: 62 63
        on right: 53
    arg_list (68)
        on left: 64 65
        on right: 63 65
    arg (69)
        on left: 66 67 68 69
        on right: 64 65
    arr_element (70)
        on left: 70 71
        on right: 58 73
    assignment_statement (71)
        on left: 72 73
        on right: 52 87 88
    switch_statment (72)
        on left: 74
        on right: 21
    case_list_def (73)
        on left: 75 76 77
        on right: 74
    case_list (74)
        on left: 78 79
        on right: 75 76 79
    case (75)
        on left: 80 81
        on right: 78 79
    default_stmt (76)
        on left: 82 83
        on right: 76
    if_statement (77)
        on left: 84
        on right: 23
    else_clause (78)
        on left: 85 86
        on right: 84
    for_loop_assignment (79)
        on left: 87 88 89
        on right: 88 92
    for_loop_declaration (80)
        on left: 90 91
        on right: 92
    for_statement (81)
        on left: 92
        on right: 26
    declaration (82)
        on left: 93
        on right: 30 90
    init_declarator_list (83)
        on left: 94 95
        on right: 93 94
    init_declarator (84)
        on left: 96 97 98
        on right: 94 95
    declarator_var (85)
        on left: 99
        on right: 96 97
    declarator_arr (86)
        on left: 100 101
        on right: 98
    while_statement (87)
        on left: 102
        on right: 28
    print_statement (88)
        on left: 103 104
        on right: 24
    print_params (89)
        on left: 105 106
        on right: 104 106
    scanf_statement (90)
        on left: 107
        on right: 25
    addr_list (91)
        on left: 108 109
        on right: 107 109
    addr (92)
        on left: 110
        on right: 108 109


State 0

    0 $accept: . s $end

    CHAR           shift, and go to state 1
    FLOAT          shift, and go to state 2
    INT            shift, and go to state 3
    VOID           shift, and go to state 4
    MAIN_FUNCTION  shift, and go to state 5

    s                       go to state 6
    functional_declaration  go to state 7
    var_type                go to state 8
    func_type               go to state 9
    main_func               go to state 10


State 1

    5 var_type: CHAR .

    $default  reduce using rule 5 (var_type)


State 2

    6 var_type: FLOAT .

    $default  reduce using rule 6 (var_type)


State 3

    4 var_type: INT .
   15 main_func: INT . MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement

    MAIN_FUNCTION  shift, and go to state 11

    $default  reduce using rule 4 (var_type)


State 4

    8 func_type: VOID .
   16 main_func: VOID . MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement

    MAIN_FUNCTION  shift, and go to state 12

    $default  reduce using rule 8 (func_type)


State 5

   14 main_func: MAIN_FUNCTION . LEFT_ROUND RIGHT_ROUND compound_statement

    LEFT_ROUND  shift, and go to state 13


State 6

    0 $accept: s . $end

    $end  shift, and go to state 14


State 7

    2 s: functional_declaration . s

    CHAR           shift, and go to state 1
    FLOAT          shift, and go to state 2
    INT            shift, and go to state 3
    VOID           shift, and go to state 4
    MAIN_FUNCTION  shift, and go to state 5

    s                       go to state 15
    functional_declaration  go to state 7
    var_type                go to state 8
    func_type               go to state 9
    main_func               go to state 10


State 8

    7 func_type: var_type .

    $default  reduce using rule 7 (func_type)


State 9

    3 functional_declaration: func_type . func_declarator compound_statement

    IDENTIFIER  shift, and go to state 16

    func_declarator  go to state 17


State 10

    1 s: main_func .

    $default  reduce using rule 1 (s)


State 11

   15 main_func: INT MAIN_FUNCTION . LEFT_ROUND RIGHT_ROUND compound_statement

    LEFT_ROUND  shift, and go to state 18


State 12

   16 main_func: VOID MAIN_FUNCTION . LEFT_ROUND RIGHT_ROUND compound_statement

    LEFT_ROUND  shift, and go to state 19


State 13

   14 main_func: MAIN_FUNCTION LEFT_ROUND . RIGHT_ROUND compound_statement

    RIGHT_ROUND  shift, and go to state 20


State 14

    0 $accept: s $end .

    $default  accept


State 15

    2 s: functional_declaration s .

    $default  reduce using rule 2 (s)


State 16

    9 func_declarator: IDENTIFIER . LEFT_ROUND RIGHT_ROUND
   10                | IDENTIFIER . LEFT_ROUND param_list RIGHT_ROUND

    LEFT_ROUND  shift, and go to state 21


State 17

    3 functional_declaration: func_type func_declarator . compound_statement

    LEFT_CURLY  shift, and go to state 22

    compound_statement  go to state 23


State 18

   15 main_func: INT MAIN_FUNCTION LEFT_ROUND . RIGHT_ROUND compound_statement

    RIGHT_ROUND  shift, and go to state 24


State 19

   16 main_func: VOID MAIN_FUNCTION LEFT_ROUND . RIGHT_ROUND compound_statement

    RIGHT_ROUND  shift, and go to state 25


State 20

   14 main_func: MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND . compound_statement

    LEFT_CURLY  shift, and go to state 22

    compound_statement  go to state 26


State 21

    9 func_declarator: IDENTIFIER LEFT_ROUND . RIGHT_ROUND
   10                | IDENTIFIER LEFT_ROUND . param_list RIGHT_ROUND

    CHAR         shift, and go to state 1
    FLOAT        shift, and go to state 2
    INT          shift, and go to state 27
    RIGHT_ROUND  shift, and go to state 28

    var_type     go to state 29
    param_list   go to state 30
    declare_var  go to state 31


State 22

   17 compound_statement: LEFT_CURLY . RIGHT_CURLY
   18                   | LEFT_CURLY . statement_list RIGHT_CURLY

    BREAK           shift, and go to state 32
    CHAR            shift, and go to state 1
    CONTINUE        shift, and go to state 33
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 34
    IF              shift, and go to state 35
    RETURN          shift, and go to state 36
    INT             shift, and go to state 27
    SWITCH          shift, and go to state 37
    WHILE           shift, and go to state 38
    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    SEMICOLON       shift, and go to state 43
    LEFT_CURLY      shift, and go to state 22
    RIGHT_CURLY     shift, and go to state 44
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47
    PRINTF_TOKEN    shift, and go to state 48
    SCANF_TOKEN     shift, and go to state 49

    var_type              go to state 50
    compound_statement    go to state 51
    statement_list        go to state 52
    single_statement      go to state 53
    jump_statement        go to state 54
    return_statement      go to state 55
    expr                  go to state 56
    expression_statement  go to state 57
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61
    switch_statment       go to state 62
    if_statement          go to state 63
    for_statement         go to state 64
    declaration           go to state 65
    while_statement       go to state 66
    print_statement       go to state 67
    scanf_statement       go to state 68


State 23

    3 functional_declaration: func_type func_declarator compound_statement .

    $default  reduce using rule 3 (functional_declaration)


State 24

   15 main_func: INT MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND . compound_statement

    LEFT_CURLY  shift, and go to state 22

    compound_statement  go to state 69


State 25

   16 main_func: VOID MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND . compound_statement

    LEFT_CURLY  shift, and go to state 22

    compound_statement  go to state 70


State 26

   14 main_func: MAIN_FUNCTION LEFT_ROUND RIGHT_ROUND compound_statement .

    $default  reduce using rule 14 (main_func)


State 27

    4 var_type: INT .

    $default  reduce using rule 4 (var_type)


State 28

    9 func_declarator: IDENTIFIER LEFT_ROUND RIGHT_ROUND .

    $default  reduce using rule 9 (func_declarator)


State 29

   13 declare_var: var_type . IDENTIFIER

    IDENTIFIER  shift, and go to state 71


State 30

   10 func_declarator: IDENTIFIER LEFT_ROUND param_list . RIGHT_ROUND

    RIGHT_ROUND  shift, and go to state 72


State 31

   11 param_list: declare_var .
   12           | declare_var . COMMA param_list

    COMMA  shift, and go to state 73

    $default  reduce using rule 11 (param_list)


State 32

   32 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 33

   33 jump_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 34

   92 for_statement: FOR . LEFT_ROUND for_loop_declaration expr for_loop_assignment RIGHT_ROUND statement_list

    LEFT_ROUND  shift, and go to state 76


State 35

   84 if_statement: IF . LEFT_ROUND expression_statement RIGHT_ROUND single_statement else_clause

    LEFT_ROUND  shift, and go to state 77


State 36

   34 return_statement: RETURN . expr

    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    SEMICOLON       shift, and go to state 43
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47

    expr                  go to state 78
    expression_statement  go to state 57
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61


State 37

   74 switch_statment: SWITCH . LEFT_ROUND expression_statement RIGHT_ROUND LEFT_CURLY case_list_def RIGHT_CURLY

    LEFT_ROUND  shift, and go to state 79


State 38

  102 while_statement: WHILE . LEFT_ROUND expression_statement RIGHT_ROUND statement_list

    LEFT_ROUND  shift, and go to state 80


State 39

   59 expression_statement: IDENTIFIER .
   62 functional_call: IDENTIFIER . LEFT_ROUND RIGHT_ROUND
   63                | IDENTIFIER . LEFT_ROUND arg_list RIGHT_ROUND
   70 arr_element: IDENTIFIER . LEFT_SQUARE I_CONSTANT RIGHT_SQUARE
   71            | IDENTIFIER . LEFT_SQUARE I_CONSTANT RIGHT_SQUARE LEFT_SQUARE I_CONSTANT RIGHT_SQUARE
   72 assignment_statement: IDENTIFIER . EQUAL_SIGN expression_statement

    EQUAL_SIGN   shift, and go to state 81
    LEFT_ROUND   shift, and go to state 82
    LEFT_SQUARE  shift, and go to state 83

    $default  reduce using rule 59 (expression_statement)


State 40

   55 expression_statement: I_CONSTANT .

    $default  reduce using rule 55 (expression_statement)


State 41

   56 expression_statement: F_CONSTANT .

    $default  reduce using rule 56 (expression_statement)


State 42

   57 expression_statement: STRING_LITERAL .

    $default  reduce using rule 57 (expression_statement)


State 43

   35 expr: SEMICOLON .

    $default  reduce using rule 35 (expr)


State 44

   17 compound_statement: LEFT_CURLY RIGHT_CURLY .

    $default  reduce using rule 17 (compound_statement)


State 45

   54 expression_statement: LEFT_ROUND . expression_statement RIGHT_ROUND

    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47

    expression_statement  go to state 84
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61


State 46

   60 unary_expr: EXCLAMATION . expression_statement

    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47

    expression_statement  go to state 85
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61


State 47

   61 unary_expr: HYPHEN . expression_statement

    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47

    expression_statement  go to state 86
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61


State 48

  103 print_statement: PRINTF_TOKEN . LEFT_ROUND STRING_LITERAL RIGHT_ROUND SEMICOLON
  104                | PRINTF_TOKEN . LEFT_ROUND STRING_LITERAL COMMA print_params RIGHT_ROUND SEMICOLON

    LEFT_ROUND  shift, and go to state 87


State 49

  107 scanf_statement: SCANF_TOKEN . LEFT_ROUND STRING_LITERAL COMMA addr_list RIGHT_ROUND SEMICOLON

    LEFT_ROUND  shift, and go to state 88


State 50

   93 declaration: var_type . init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 89

    init_declarator_list  go to state 90
    init_declarator       go to state 91
    declarator_var        go to state 92
    declarator_arr        go to state 93


State 51

   31 single_statement: compound_statement .

    $default  reduce using rule 31 (single_statement)


State 52

   18 compound_statement: LEFT_CURLY statement_list . RIGHT_CURLY

    RIGHT_CURLY  shift, and go to state 94


State 53

   19 statement_list: single_statement .
   20               | single_statement . statement_list

    BREAK           shift, and go to state 32
    CHAR            shift, and go to state 1
    CONTINUE        shift, and go to state 33
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 34
    IF              shift, and go to state 35
    RETURN          shift, and go to state 36
    INT             shift, and go to state 27
    SWITCH          shift, and go to state 37
    WHILE           shift, and go to state 38
    IDENTIFIER      shift, and go to state 39
    I_CONSTANT      shift, and go to state 40
    F_CONSTANT      shift, and go to state 41
    STRING_LITERAL  shift, and go to state 42
    SEMICOLON       shift, and go to state 43
    LEFT_CURLY      shift, and go to state 22
    LEFT_ROUND      shift, and go to state 45
    EXCLAMATION     shift, and go to state 46
    HYPHEN          shift, and go to state 47
    PRINTF_TOKEN    shift, and go to state 48
    SCANF_TOKEN     shift, and go to state 49

    BREAK           [reduce using rule 19 (statement_list)]
    CHAR            [reduce using rule 19 (statement_list)]
    CONTINUE        [reduce using rule 19 (statement_list)]
    FLOAT           [reduce using rule 19 (statement_list)]
    FOR             [reduce using rule 19 (statement_list)]
    IF              [reduce using rule 19 (statement_list)]
    RETURN          [reduce using rule 19 (statement_list)]
    INT             [reduce using rule 19 (statement_list)]
    SWITCH          [reduce using rule 19 (statement_list)]
    WHILE           [reduce using rule 19 (statement_list)]
    IDENTIFIER      [reduce using rule 19 (statement_list)]
    I_CONSTANT      [reduce using rule 19 (statement_list)]
    F_CONSTANT      [reduce using rule 19 (statement_list)]
    STRING_LITERAL  [reduce using rule 19 (statement_list)]
    SEMICOLON       [reduce using rule 19 (statement_list)]
    LEFT_CURLY      [reduce using rule 19 (statement_list)]
    LEFT_ROUND      [reduce using rule 19 (statement_list)]
    EXCLAMATION     [reduce using rule 19 (statement_list)]
    HYPHEN          [reduce using rule 19 (statement_list)]
    PRINTF_TOKEN    [reduce using rule 19 (statement_list)]
    SCANF_TOKEN     [reduce using rule 19 (statement_list)]
    $default        reduce using rule 19 (statement_list)

    var_type              go to state 50
    compound_statement    go to state 51
    statement_list        go to state 95
    single_statement      go to state 53
    jump_statement        go to state 54
    return_statement      go to state 55
    expr                  go to state 56
    expression_statement  go to state 57
    unary_expr            go to state 58
    functional_call       go to state 59
    arr_element           go to state 60
    assignment_statement  go to state 61
    switch_statment       go to state 62
    if_statement          go to state 63
    for_statement         go to state 64
    declaration           go to state 65
    while_statement       go to state 66
    print_statement       go to state 67
    scanf_statement       go to state 68


State 54

   29 single_statement: jump_statement .

    $default  reduce using rule 29 (single_statement)


State 55

   27 single_statement: return_statement .

    $default  reduce using rule 27 (single_statement)


State 56

   22 single_statement: expr .
   37 expr: expr . COMMA expr SEMICOLON

    COMMA  shift, and go to state 96

    $default  reduce using rule 22 (single_statement)


State 57

   36 expr: expression_statement . SEMICOLON
   38 expression_statement: expression_statement . OR_OP expression_statement
   39                     | expression_statement . AND_OP expression_statement
   40                     | expression_statement . GT_OP expression_statement
   41                     | expression_statement . LT_OP expression_statement
   42                     | expression_statement . GE_OP expression_statement
   43                     | expression_statement . LE_OP expression_statement
   44                     | expression_statement . PLUS expression_statement
   45                     | expression_statement . HYPHEN expression_statement
   46                     | expression_statement . STAR expression_statement
   47                     | expression_statement . SLASH expression_statement
   48                     | expression_statement . PERCENT expression_statement
   49                     | expression_statement . EQ_OP expression_statement
   50                     | expression_statement . NE_OP expression_statement

    AND_OP     shift, and go to state 97
    OR_OP      shift, and go to state 98
    LE_OP      shift, and go to state 99
    GE_OP      shift, and go to state 100
    EQ_OP      shift, and go to state 101
    NE_OP      shift, and go to state 102
    SEMICOLON  shift, and go to state 103
    HYPHEN     shift, and go to state 104
    PLUS       shift, and go to state 105
    STAR       shift, and go to state 106
    SLASH      shift, and go to state 107
    LT_OP      shift, and go to state 108
    GT_OP      shift, and go to state 109
    PERCENT    shift, and go to state 110


State 58

   51 expression_statement: unary_expr .

    $default  reduce using rule 51 (expression_statement)


State 59

   53 expression_statement: functional_call .

    $default  reduce using rule 53 (expression_statement)


State 60

   58 expression_statement: arr_element .
   73 assignment_statement: arr_element . EQUAL_SIGN expression_statement

    EQUAL_SIGN  shift, and go to state 111

    $default  reduce using rule 58 (expression_statement)


State 61

   52 expression_statement: assignment_statement .

    $default  reduce using rule 52 (expression_statement)


State 62

   21 single_statement: switch_statment .

    $default  reduce using rule 21 (single_statement)


State 63

   23 single_statement: if_statement .

    $default  reduce using rule 23 (single_statement)


State 64

   26 single_statement: for_statement .

    $default  reduce using rule 26 (single_statement)


State 65

   30 single_statement: declaration .

    $default  reduce using rule 30 (single_statement)


State 66

   28 single_statement: while_statement .

    $default  reduce using rule 28 (single_statement)


State 67

   24 single_statement: print_statement .

    $default  reduce using rule 24 (single_statement)


State 68

   25 single_statement: scanf_statement .

    $default  reduce using rule 25 (single_statement)


State 69
